data/repos_history/RZPJR/auth/2023-11-08T11:11:56Z/kubernetes/deploy-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fe-auth

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-auth
  labels:
    app: fe-auth
  namespace: fe-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-auth
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: fe-auth
    spec:
      imagePullSecrets:
      - name: registry
      containers:
      - name: fe-auth
        image: git.edenfarm.id:5050/project-version3/erp-dashboard/auth/master:<VERSION>
        ports:
          - name: http-port
            containerPort: 8080
        imagePullPolicy: Always
        resources:
          requests:
            memory: 50Mi
            cpu: 15m
          limits:
            memory: 350Mi
            cpu: 200m
        volumeMounts:
        - name: tz-config
          mountPath: /etc/localtime
      volumes:
        - name: tz-config
          hostPath:
            path: /usr/share/zoneinfo/Asia/Jakarta
            type: File
      # tolerations:
      # - key: instance_type
      #   value: service
      #   effect: NoSchedule
      #   operator: Equal
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: role
      #           operator: In
      #           values:
      #           - devops
      #   podAntiAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #     - labelSelector:
      #         matchExpressions:
      #         - key: app
      #           operator: In
      #           values:
      #           - fe-auth
      #       topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: svc-fe-auth
  namespace: fe-auth
  labels:
    app: fe-auth
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http-port
  selector:
    app: fe-auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fe-auth
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: fe-auth
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - fe-auth.edenfarm.id
    secretName: fe-auth-tls
  rules:
  - host: fe-auth.edenfarm.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-fe-auth
            port:
              number: 80
